<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.udacitylastprojectphase1.EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/product_name"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/product_quantity"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/product_price"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/supplier_name"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/supplier_phone_number"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/product_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">


                <EditText
                    android:id="@+id/product_quantity_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:layout_weight="7"/>

                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/button_plus"
                    android:gravity="center"
                    android:layout_margin="4dp"/>

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/button_minus"
                    android:gravity="center"
                    android:layout_margin="4dp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/product_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="number" />


            <EditText
                android:id="@+id/product_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <EditText
                android:id="@+id/product_supplier_phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="phone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_product" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_button" />

        <Button
            android:id="@+id/button_call_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_call_supplier" />

    </LinearLayout>

</LinearLayout>
