<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="8dp"
            android:text="@string/quantity"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:textAppearanceSmall"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="8dp"
            android:text="@string/price"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:textAppearanceSmall"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/sell_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell_button"
        android:gravity="center"
        android:textColor="@color/colorRed"
        android:textSize="16sp"
        android:focusable="false"/>
</LinearLayout>